--- a/Maharastra AQI ETL Project.ipynb
+++ b/Maharastra AQI ETL Project.ipynb
@@ -51,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"215488juygfdghj78945226487ouyrrdsseer0976rre43\"\n",
-    "resource_id = \"3b01bcb8-0b14-4abf-b6f2-fd387899484bajiu69\"\n",
+    "api_key = \"\cannot be made public"\n",
+    "resource_id = \\"Cannot be made public\n",
     "url = \"https://api.data.gov.in/resource/3b01bcb8-0b14-4abf-b6f2-c1bfd384ba69\"\n"
    ]
   },
