--- a/Maharastra AQI ETL Project.ipynb
+++ b/Maharastra AQI ETL Project.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "api_key = \"\cannot be made public"\n",
-    "resource_id = \\"Cannot be made public\n",
+    "resource_id = \"\Cannot be made public\n",
     "url = \"https://api.data.gov.in/resource/3b01bcb8-0b14-4abf-b6f2-c1bfd384ba69\"\n"
    ]
   },
