Update Maharastra AQI ETL Project.ipynb

--- a/Maharastra AQI ETL Project.ipynb
+++ b/Maharastra AQI ETL Project.ipynb
@@ -51,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"\cannot be made public"\n",
-    "resource_id = \"\Cannot be made public\n",
+    "api_key = \"1235488oer987456998854522565478958455645888\"\n",
+    "resource_id = \"4875878-21547896-ueydh789955ddjjeue11445\"\n,
     "url = \"https://api.data.gov.in/resource/3b01bcb8-0b14-4abf-b6f2-c1bfd384ba69\"\n"
    ]
   },
